--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,32 @@ body{
     background-color: white;
 }
 
-.countainer{
+.countainer-large{
     max-width: 1080px;
     margin:0 auto;
+    
 }
 
+h1{
+    padding: 30px 0;
 
+}
+
+.box-small{
+    background-color: crimson;
+    width: 30%;
+    min-height: 400px;
+}
+
+.box-large{
+    background-color: darkgreen;
+    width: 70%;
+    min-height: 400px;
+}
 /* Header*/ 
 
 .navbar{
-    min-height: 100px;
+    min-height: 70px;
     border: 2px dashed black;
     display:flex;
     justify-content: space-between;
@@ -29,14 +45,21 @@ body{
 
 .nav-left{
     width: 30%;
-    min-height: 100px;
     background-color: aqua;
     
    
 }
 .nav-right{
     width: 30%;
-    min-height: 100px;
     background-color: aqua;
    
+}
+
+.jumbotron{
+    min-height: 600px;
+    background-color: chartreuse;
+}
+
+.box{
+    display: flex;
 }
