--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,7 @@ a{
     height: 100%;
     width: auto;
     display: block;
-    background-size: cover;
-    background-position: center;
-    background: no-repeat;
+ 
 }
 
 .countainer-small{
@@ -62,7 +60,16 @@ p{
 .box-large{
     width: 60%;
     min-height: 400px;
-    background-color: hotpink;
+    position:relative; 
+}
+
+.jumbo-img{
+    flex-basis: 100%;
+    height: 400px;
+    position:absolute;
+    left:0;
+    right:0;
+    bottom:-15%;
 }
 .box-medium{
     min-height: 200px;
@@ -108,7 +115,7 @@ p{
 }
 
 .bottone{
-    background-color: #0061FE;
+    background-color: #0061ff;
     color:white;
     padding: 5px 10px;
     border: none;
@@ -116,7 +123,7 @@ p{
 
 .jumbotron{
     min-height: 600px;
-    background-color: #B0C4DE;
+    background-color: #b4d0e7;
 }
 
 /* Main */
