--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,26 @@ body{
 
 a{
     text-decoration: none;
+    color:black;
+}
+img{
+    max-width: 100%;
+    display: block;
+}
+
+.btn{   background-color: #0061ff;
+    color:white;
+    padding: 10px 15px;
+    border: none;
+    display: inline-block;
+}
+
+.btn-small {
+    padding: 5px 15px;
+}
+
+.mb-20{
+    margin-bottom: 20px;
 }
 
 ul{
@@ -33,7 +53,7 @@ ul{
 
 h1{ 
     font-size: 55px;
-    padding: 30px 0;
+    padding-top: 80px;
     text-align: center;
     font-weight: bolder;
 }
@@ -49,10 +69,6 @@ p{
     padding-bottom: 20px;
 }
 
-.box{
-    display: flex;
-}
-
 .box-small{
     width: 40%;
     min-height: 400px;
@@ -60,19 +76,11 @@ p{
     
 }
 
-.box-large{
-    width: 60%;
-    min-height: 400px;
-    position:relative; 
-}
+
 
 .jumbo-img{
     flex-basis: 100%;
     height: 400px;
-    position:absolute;
-    left:0;
-    right:0;
-    bottom:-15%;
 }
 .box-medium{
     min-height: 200px;
@@ -103,10 +111,6 @@ p{
     width: 30%;
 }
 
-.arrow{
-    font-size: 35px;
-}
-
 .lista{
     font-size: 15px;
     display: flex;
@@ -117,17 +121,22 @@ p{
     line-height: 100%;
 }
 
-.bottone{
-    background-color: #0061ff;
-    color:white;
-    padding: 5px 10px;
-    border: none;
-}
+
 
 .jumbotron{
     min-height: 600px;
     background-color: #b4d0e7;
+
 }
+
+.box{
+    display: flex;
+    position: relative;
+    left: 0;
+    right: 0;
+    bottom: -60px;
+}
+
 
 /* Main */
 
@@ -218,6 +227,12 @@ p{
     min-height: 50%;
     flex-basis:50%;
     border:2px black dashed;
+}
+
+.logo-size{
+    height: 100%;
+    width: 100%;
+    display: block;
 }
 
 .trial{
