--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,14 @@ a{
     text-decoration: none;
     color:black;
 }
+
+.a-blue{
+    text-decoration: underline;
+    color:#0061ff;
+}
 img{
     max-width: 100%;
+    height: auto;
     display: block;
 }
 
@@ -41,8 +47,8 @@ img{
     margin-top: 40px;
 }
 
-.p-30{
-    padding:30px;
+.ml-20{
+    margin-left:20px;
 }
 
 ul{
@@ -73,15 +79,28 @@ h2{
     font-weight: bolder;
 }
 
+h3{
+    margin: 20px 0;
+    margin-left:20px;
+}
+
 p{
     padding-bottom: 20px;
 }
+
+.box{
+    display: flex;
+    position: relative;
+    left: 0;
+    right: 0;
+    bottom: -60px;
+}
+
 
 .box-small{
     width: 40%;
     min-height: 400px;
     font-size: 15px;
-    
 }
 
 .box-large{
@@ -91,17 +110,15 @@ p{
     
 }
 
-
-
-.jumbo-img{
-    flex-basis: 100%;
-    height: 400px;
-}
 .box-medium{
     min-height: 200px;
     width: 50%;
     background-color: aqua;
     border: 1px black dashed;
+}
+
+.pl-5{
+    padding-left: 5px;
 }
 
 /* Header*/ 
@@ -144,12 +161,9 @@ p{
 
 }
 
-.box{
-    display: flex;
-    position: relative;
-    left: 0;
-    right: 0;
-    bottom: -60px;
+.jumbo-img{
+    flex-basis: 100%;
+    height: 400px;
 }
 
 
@@ -195,11 +209,18 @@ p{
   
 }
 
+.col-operations{
+    min-height: 600px;
+    flex-basis: calc(100% / 3 - 20px);
+    margin: 10px;
+  
+}
+
 .col-large{
     flex-basis: 100%;
     min-height: 200px;
     margin:10px;
-    border: 2px dashed red;
+    border: 1px solid black;
 }
 
 .card-typology{
@@ -208,9 +229,7 @@ p{
     border-bottom: 1px solid gray;
 }
 
-.space{
-    padding-left: 5px;
-}
+
 
 .card-small{
     min-height: 600px;
