--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,9 @@ p{
     bottom: -60px;
 }
 
+.box-trial{
+    display: flex;
+}
 
 .box-small{
     width: 40%;
@@ -113,7 +116,6 @@ p{
 .box-medium{
     min-height: 200px;
     width: 50%;
-    background-color: aqua;
     border: 1px black dashed;
 }
 
@@ -255,6 +257,8 @@ p{
 .company-description{
     flex-basis: calc(100% / 3);
     background-color: #F5F5F5;
+    padding: 5px 15px;
+    font-size: 15px;
 }
 
 .logo-img{
@@ -273,10 +277,12 @@ p{
 }
 
 .logo-size{
-    height: 50%;
-    width: 50%;
+    height: 40%;
+    width: 40%;
     display: block;
+
 }
+/* logo backrounds */
 
 .bg-green{
     background-color: #A2D39B;
@@ -308,11 +314,21 @@ p{
     background-color: #FFD830;
 }
 
+
+
+
+
+
+
 .trial{
     min-height: 200px;
-    background-color: yellow;
+    background-color: #B4D0E7;
 }
 
+.trial-color{
+    color: #61082B;
+    font-size: 35px;
+}
 
 
 .faq{
@@ -338,6 +354,14 @@ p{
     color:white;
 }
 
+.lista-bianca{
+    list-style: none;
+}
+
+
+.a-bianca{
+    color:white;
+}
 
 .info-list{
     display: flex;
@@ -346,6 +370,5 @@ p{
 
 .box-list{
     min-height: 300px;
-    border: 2px dashed blue;
     flex-basis: calc(100% / 5);
 }
