--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,7 @@ h3{
     height: calc(100vw / 3);
     display: flex;
     flex-wrap: wrap;
+
 }
 
 .company-description{
@@ -318,7 +319,14 @@ h3{
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 15px solid transparent;
     
+}
+
+/* Bonus logo */
+
+.logo-img:hover{
+    border-color: rgba(255, 255, 255, 0.5);
 }
 
 .logo-position{
